Control flow: Control flow graph data structure